introduce needed CSS tokenizer states for proper contextual #{ident|hexcolor} parsing

BUG: 170068

svn path=/trunk/KDE/kdelibs/; revision=856458